# UTBuilder

./: .gitignore  CMakeLists.txt
Sources/JsonCpp/: CMakeLists.txt
Sources/Plustache/: CMakeLists.txt
Sources/Plustache/C/: context.cpp  template.cpp
Sources/Plustache/Include/: context.hpp  template.hpp
Sources/UTBuilder/: CMakeLists.txt
Sources/UTBuilder/C/: ASTinfo.cpp  Action.cpp  AllTypesVisitor.cpp  ClangCompiler.cpp  Consumer.cpp  DataFile.cpp  FuncParamsStructure.cpp  FuncUTDefVisitor.cpp  FunctionTestCollection.cpp  FunctionTestContent.cpp  FunctionTestData.cpp  FunctionTestDataFile.cpp  FunctionsData.cpp  JsonReader.cpp  JsonWriter.cpp  MockVisitor.cpp  NameValueTypeActions.cpp  NameValueTypeNode.cpp  NameValueTypeVisitor.cpp  ProjectDescription.cpp  Results.cpp  StructVisitor.cpp  TestData.cpp  TreeNode.cpp  TreeNodeActions.cpp  TreeNodeVisitor.cpp  TreeNodes.cpp  TreeNodesActions.cpp  TreeNodesVisitor.cpp  TypedefVisitor.cpp  UnitTestData.cpp  UnitTestDataUtils.cpp  Utils.cpp  Writers.cpp  WritersManager.cpp  globber.cpp  main.cpp  optionparser.cpp  utils.cpp  writer.cpp
Sources/UTBuilder/Include/: ASTinfo.h  Action.h  AllTypesVisitor.h  ClangCompiler.h  Consumer.h  DataFile.h  FuncParamsStructure.h  FuncUTDefVisitor.h  FunctionTestCollection.h  FunctionTestContent.h  FunctionTestData.h  FunctionTestDataFile.h  FunctionsData.h  JsonReader.h  JsonWriter.h  MockVisitor.h  NameValueTypeActions.h  NameValueTypeNode.h  NameValueTypeVisitor.h  Patterns.h  PrecompilerOptionAST.h  ProjectDescription.h  Results.h  Serializable.h  StructVisitor.h  TestData.h  TreeNode.h  TreeNodeActions.h  TreeNodeVisitor.h  TreeNodes.h  TreeNodesActions.h  TreeNodesVisitor.h  TypedefVisitor.h  UnitTestData.h  UnitTestDataUtils.h  Utils.h  Visitor.h  Writers.h  WritersManager.h  globber.h  (+4 more)
Template/: CMakeFile.template  UT.template  globals.template  mock.template  serialization-struct.template  serialization.template
cmake/: launcher.cmake-template
